--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html ng-app="CrystalCoach">
+<html ng-app="NutriFit">
 
 <head>
-	<title>CrystalCoach Alpha</title>
+	<title>NutriFit</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 </head>
 
 <body ng-controller="CoachCtrl">
 <!-- POPULATION TIME -->
-	Welcome to CrystalCoach!
+	Welcome to NutriFit!
 
 	<button class="test-button">Testing!</button>
 
