--- a/nf/index.html
+++ b/nf/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CrystalCoach Alpha</title>
+	<title>NutriFit Alpha</title>
 
 	<!-- FAVICON -->
 	<link rel="icon" href="./img/mic.png"/>
@@ -20,7 +20,7 @@
 
 	<div id="intro">
 		<center><img class="lazy-title-logo" src="./img/crystalcoach-logo-transparent.png"/>
-		<!-- <h1>CrystalCoach</h1> -->
+		<!-- <h1>NutriFit</h1> -->
 		<button class="to-app-btn" onclick="startCoach()">Get Started</button>
 	</div>
 
@@ -28,7 +28,7 @@
 		<canvas id="demo-canvas"></canvas>
 		<div class="app-content container">
 			<div class="row">
-				<h1>CrystalCoach</h1>
+				<h1>NutriFit</h1>
 			</div>
 			<!-- Body -->
 			<div class="row">
@@ -38,7 +38,7 @@
 				<!-- CHAT -->
 				<div class="col-md-2 col-md-offset-1">
 					<div class="chatContainer">
-					  <h3>Chat With Crystal</h3>
+					  <h3>Chat With NutriFit</h3>
 					  <br>
 					  <div id="messageStore">
 					  	<ul id='messages' class="messages"></ul>
@@ -62,7 +62,7 @@
 					<span id="username"></span>
 					<h5>Today's Calorie Count</h5>
 					<span id="calories"></span>
-					<h5>Crystal's Suggestion</h5>
+					<h5>NutriFit's Suggestion</h5>
 					<span id="crystalSuggest"></span>
 				</div>
 			</div>
@@ -90,7 +90,7 @@
 
   <!-- CUSTOM -->
   <!-- Main CrystalCoach Functions -->
-	<!-- <script src="./js/crystalcoach.js"></script> -->
+	<!-- <script src="./js/nutrifit.js"></script> -->
   <!-- Main DOM Functions -->
 	<script src="./js/main.js"></script>
 	<!-- Fancy Particle BG Courtesy of Codrops -->
