--- a/nf/index.html
+++ b/nf/index.html
@@ -1,101 +1,92 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>NutriFit Alpha</title>
-
-	<!-- FAVICON -->
-	<link rel="icon" href="./img/mic.png"/>
-	<!-- BOOTSTRAP CDN -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-	<!-- CABIN FONT -->
-	<link href='https://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
-	<!-- CUSTOM STYLES -->
-	<link rel="stylesheet" href="./css/styles.css"/>
-	<link rel="stylesheet" href="./css/mbox.css"/>
+    <title>NutriFit Alpha</title>
+    <!-- FAVICON -->
+    <link rel="icon" href="./img/mic.png" />
+    <!-- BOOTSTRAP CDN -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <!-- CABIN FONT -->
+    <link href='https://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
+    <!-- CUSTOM STYLES -->
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/mbox.css" />
 </head>
+
 <body>
-
-	<div id="bg"></div>
-	<div id="bg-overlay"></div>
-
-	<div id="intro">
-		<center><img class="lazy-title-logo" src="./img/crystalcoach-logo-transparent.png"/>
-		<!-- <h1>NutriFit</h1> -->
-		<button class="to-app-btn" onclick="startCoach()">Get Started</button>
-	</div>
-
-	<div id="app">
-		<canvas id="demo-canvas"></canvas>
-		<div class="app-content container">
-			<div class="row">
-				<h1>NutriFit</h1>
-			</div>
-			<!-- Body -->
-			<div class="row">
-					
-				<img class="talk-btn img-responsive" src="./img/mic.png" onclick="getVoice()" />
-				
-				<!-- CHAT -->
-				<div class="col-md-2 col-md-offset-1">
-					<div class="chatContainer">
-					  <h3>Chat With NutriFit</h3>
-					  <br>
-					  <div id="messageStore">
-					  	<ul id='messages' class="messages"></ul>
-					  </div>
-					  <div class="chatInputFloat">
-					  	<div class='chatInput'>
-					    <label for="nameInput">Username: </label>
-					    <input type='text' id='nameInput' placeholder='enter a username...'>
-					  	</div>
-						  <footer>
-						    <input type='text' id='messageInput'  placeholder='Type a message...'>
-						    <h5 onClick="removeAll()" style="cursor: pointer;background-color:#ddd;border-radius:10px;padding: 8px">Remove All Messages</h5>
-						  </footer>
-					  </div>
-					</div>
-				</div>
-
-				<!-- CONTENT -->
-				<div class="col-md-8" style="text-align: right">
-					<h3>User</h3>
-					<span id="username"></span>
-					<h5>Today's Calorie Count</h5>
-					<span id="calories"></span>
-					<h5>NutriFit's Suggestion</h5>
-					<span id="crystalSuggest"></span>
-				</div>
-			</div>
-		</div>
-	</div>
-
-			<canvas id="line" class="chart chart-line" chart-data="data"
-			  chart-labels="labels" chart-legend="true" chart-series="series"
-			  chart-click="onClick" >
-			</canvas>
-
-	<!-- LIBRARIES -->
-  <!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<!-- ResponsiveVoice -->
-  <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
-	<!-- Bootstrap -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<!-- Firebase Client -->
-	<script src='https://cdn.firebase.com/js/client/2.1.0/firebase.js'></script>
-	<!-- Firechat -->
-	<script src='https://cdn.firebase.com/libs/firechat/2.0.1/firechat.min.js'></script>
-	<!-- Angular -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-
-  <!-- CUSTOM -->
-  <!-- Main CrystalCoach Functions -->
-	<!-- <script src="./js/nutrifit.js"></script> -->
-  <!-- Main DOM Functions -->
-	<script src="./js/main.js"></script>
-	<!-- Fancy Particle BG Courtesy of Codrops -->
-	<script src="./js/animated-bg.js"></script>
-	<!-- NG Graph -->
-	<script src="./js/main.js"></script>
+    <div id="bg"></div>
+    <div id="bg-overlay"></div>
+    <div id="intro">
+        <center><img class="lazy-title-logo" src="./img/crystalcoach-logo-transparent.png" />
+            <!-- <h1>NutriFit</h1> -->
+            <button class="to-app-btn" onclick="startCoach()">Get Started</button>
+    </div>
+    <div id="app">
+        <canvas id="demo-canvas"></canvas>
+        <div class="app-content container">
+            <div class="row">
+                <h1>NutriFit</h1>
+            </div>
+            <!-- Body -->
+            <div class="row">
+                <img class="talk-btn img-responsive" src="./img/mic.png" onclick="getVoice()" />
+                <!-- CHAT -->
+                <div class="col-md-2 col-md-offset-1">
+                    <div class="chatContainer">
+                        <h3>Chat With NutriFit</h3>
+                        <br>
+                        <div id="messageStore">
+                            <ul id='messages' class="messages"></ul>
+                        </div>
+                        <div class="chatInputFloat">
+                            <div class='chatInput'>
+                                <label for="nameInput">Username: </label>
+                                <input type='text' id='nameInput' placeholder='enter a username...'>
+                            </div>
+                            <footer>
+                                <input type='text' id='messageInput' placeholder='Type a message...'>
+                                <h5 onClick="removeAll()" style="cursor: pointer;background-color:#ddd;border-radius:10px;padding: 8px">Remove All Messages</h5>
+                            </footer>
+                        </div>
+                    </div>
+                </div>
+                <!-- CONTENT -->
+                <div class="col-md-8" style="text-align: right">
+                    <h3>User</h3>
+                    <span id="username"></span>
+                    <h5>Today's Calorie Count</h5>
+                    <span id="calories"></span>
+                    <h5>NutriFit's Suggestion</h5>
+                    <span id="crystalSuggest"></span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <canvas id="line" class="chart chart-line" chart-data="data" chart-labels="labels" chart-legend="true" chart-series="series" chart-click="onClick">
+    </canvas>
+    <!-- LIBRARIES -->
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <!-- ResponsiveVoice -->
+    <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+    <!-- Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- Firebase Client -->
+    <script src='https://cdn.firebase.com/js/client/2.1.0/firebase.js'></script>
+    <!-- Firechat -->
+    <script src='https://cdn.firebase.com/libs/firechat/2.0.1/firechat.min.js'></script>
+    <!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+    <!-- CUSTOM -->
+    <!-- Main CrystalCoach Functions -->
+    <!-- <script src="./js/nutrifit.js"></script> -->
+    <!-- Main DOM Functions -->
+    <script src="./js/main.js"></script>
+    <!-- Fancy Particle BG Courtesy of Codrops -->
+    <script src="./js/animated-bg.js"></script>
+    <!-- NG Graph -->
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
