--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <div class="title">
                 <h1>NutriFit.AI</h1>
                 <h3>Your Personal Nutritionist</h3>
+                <h5>Converse + Record + Observe</h5>
                 <button class="btn" onclick="window.open('https://www.hackerearth.com/sprints/brickhack-ii/teams/9555d6b/')">The NutriFit Team</button>
                 <button class="btn" onclick="window.open('https://www.hackerearth.com/sprints/brickhack-ii/teams/9555d6b/')">Built With</button>
                 <button class="btn" onclick="window.open('https://github.com/davidbang/NutriFit')">View Source</button>
@@ -85,7 +86,8 @@
                 <br>
             </div>
             <div>
-            	<p>Calorie Intake: <span id="calorie-cntr"></span></p>
+                <p>User: <span id="username"></span></p>
+                <p>Calorie Intake: <span id="calorie-cntr"></span></p>
             	<p>Fat: <span id="fat-cntr"></span></p>
             	<p>Protein: <span id="protein-cntr"></span></p>
             	<p>Carbohydrates: <span id="carb-cntr"></span></p>
