--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 								</video>
 		            <img src="./img/bg-go.jpg" alt="Background Image" />
                 <div class="bg-overlay"></div>
+                <!-- <div class="bg-overlay" style="background-image: url(./img/nutrifit.png); background-repeat: no-repeat; opacity: .3"></div> -->
             </div>
         </header>
 
