--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                 <h2>User:</h2>
                 <p class="userDesc"><span id="username"></span><br>Gender: <span class="userDesc" id="gender">-</span><br>Weight: <span class="userDesc" id="weight">-</span><br>Age: <span class="userDesc" id="age">-</span></p>
                 <h4>Today's:</h4>
-                <p>Calorie Intake: <span id="calorie-cntr"></span></p>
-            	<p>Fat: <span id="fat-cntr"></span></p>
-            	<p>Protein: <span id="protein-cntr"></span></p>
-            	<p>Carbohydrates: <span id="carb-cntr"></span></p>
-	            <div id="chart" style="height: 250px"></div>
+                <p>Calorie Intake: <span class="userDesc" id="calorie-cntr">-</span></p>
+            	<p>Fat: <span class="userDesc" id="fat-cntr">-</span></p>
+            	<p>Protein: <span class="userDesc" id="protein-cntr">-</span></p>
+            	<p>Carbohydrates: <span class="userDesc" id="carb-cntr">-</span></p>
+	            <div id="chart" style="height: 250px">-</div>
             </div>
         </article>
     </div>
